fixed responsive view on mobile devices

--- a/style.css
+++ b/style.css
@@ -458,10 +458,6 @@ figure.snip1256.hover figcaption {
   transition-delay: 0.2s;
 }
 
-.section3 {
-  display: flex;
-  justify-content: center;
-}
 
   /***********************
   created-by-varun 
